fix(files): mobile wrap for directory name

--- a/components/views/navigation/mobile/nav/Nav.less
+++ b/components/views/navigation/mobile/nav/Nav.less
@@ -36,8 +36,10 @@
     flex: 1;
     font-size: @small-icon-size;
     color: @text-muted;
+    opacity: 0.7;
     &.active {
       color: @secondary-text;
+      opacity: 1;
     }
   }
 }
